--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ footer{
     background-color: #e8491d;
     text-align: center;
   }
-  .rev-section{
+  .review-section{
     margin: auto;
     padding: 0 1rem;
     max-width: 1100px;
@@ -72,7 +72,7 @@ footer{
     color: rgb(50, 50, 50);
     margin-bottom: .5rem;
   }
-  .note{
+  .notes{
     font-size: 1.1rem;
     color: rgb(150, 150, 150);
     font-style: italic;
@@ -105,7 +105,7 @@ footer{
     box-shadow: 0 10px 25px rgba(0, 0, 0, .25);
   }
   
-  .body-review{
+  .review-body{
     background-color: rgb(238, 238, 238);
     padding: 2.5rem;
     box-shadow: 2px 2px 10px 3px rgb(225, 225, 225);
