--- a/styles.css
+++ b/styles.css
@@ -1,132 +1,142 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:15px;
-    line-height: 1.5;
-    padding: 0;
-    margin:0;
-    background-color: lightgray;
-  }
-ul{
-    margin: 0;
-    padding: 0;
-  }
+  /* background-color: rgb(243, 233, 233); */
+}
+
 .container{
-    width:80%;
-    margin:auto;
-    overflow: hidden;
-  }
-header{
-    background: #35424a;
-    color:white;
-    padding-top: 30px;
-    min-height: 70px;
-    border-bottom: orangered 3px solid;
-  }
-header a{
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-  }
-header li{
-    float: left;
-    display: inline;
-    padding: 0 20px 0 20px;
-  }
-header #logo{
-    float: left;
-  }
-header #logo h1{
-    margin:0;
-  }
-header nav{
-    float:right;
-    margin-top: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0
+}
+
+.head-review img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+.aside {
+  width: 40%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  height: 150px;
+  background-color: palevioletred;
+}
+
+.about{
+  width: 55%;
+  font-size: x-large;
+  background-color: hotpink;
+  height: 300px;
+}
+
+.review-left{
+  width: 50%;
+  float:left;
+  height: 200 px;
+}
+.review-right{
+  width: 50%;
+  float:right;
+  height: 200 px;
+}
+.review-body{
+  padding-bottom: 5 px;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: medium;
+}
+
+#form{
+  text-align: center;
   
-  }
-header a:hover{
-    color:#cccccc;
-    font-size: bold;
-  }
-.center {
-    text-align: center;
-    text-decoration-color: blue;
-   }
-footer{
-    padding:20px;
-    margin-top: 20px;
-    color:white;
-    background-color: #e8491d;
-    text-align: center;
-  }
-  .review-section{
-    margin: auto;
-    padding: 0 1rem;
-    max-width: 1100px;
-    text-align: center;
-  }
-  
-  .title{
-    font-size: 2.5rem;
-    text-transform: uppercase;
-    color: rgb(50, 50, 50);
-    margin-bottom: .5rem;
-  }
-  .notes{
-    font-size: 1.1rem;
-    color: rgb(150, 150, 150);
-    font-style: italic;
-      color: red;
-    font
-  
-  }
-  
-  .reviews{
-    margin: 2rem auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .review{
-    margin: 0 1rem;
-    min-width: 300px;
-    flex: 1;
-  }
-  
-  .head-review{
-    margin: 1.75rem auto;
-    width: 150px;
-    height: 150px;
-  }
-  img{
+}
+.formRow {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.formColumn {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/*feedback form CSS*/
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.leftcol {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.rightcol {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .leftcol, .rightcol, input[type=submit] {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, .25);
+    margin-top: 0;
   }
-  
-  .review-body{
-    background-color: rgb(238, 238, 238);
-    padding: 2.5rem;
-    box-shadow: 2px 2px 10px 3px rgb(225, 225, 225);
-  }
-  .name-review{
-    font-size: 1.5rem;
-    color: rgb(50, 50, 50);
-    margin-bottom: .25rem;
-  }
-  .place-review{
-    color: red;
-    font-style: italic;
-  .desc-review{
-    line-height: 1.5rem;
-    letter-spacing: 1px;
-    color: rgb(150, 150, 150);
-  }
-  
-  @media (max-width: 678px){
-    .review{
-      margin-top: 1.5rem;
-    }
-  }
-  
+
+#feedback{
+  background-color: palevioletred;
+
+  border-radius: 5px;
+  padding: 20px;
+  background: rgba(29, 128, 29, 0.30.6)
+}
