--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,22 @@
+*{
+  box-sizing: border-box;
+}
+
 body{
   /* background-color: rgb(243, 233, 233); */
+}
+h2{
+  text-align: center;
+  font-weight: lighter;
+  color: #4CAF50;
+  padding: 1em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.intro{
+  text-align: center;
+  color: rgb(29, 54, 138);
+  padding-bottom: 1em;
 }
 
 .container{
@@ -7,6 +24,62 @@ body{
   border-radius: 5px;
   padding: 16px;
   margin: 16px 0
+}
+
+.grid-container {  
+  display: grid;
+  grid-gap: 5px;
+  padding: 1rem;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+}
+
+.item1 {
+  box-sizing: border-box;
+  grid-column: 1 / span 2;
+  background: rgba(76, 175, 80, 0.3);
+  border-radius: 5px;
+}
+
+.item2 {
+  box-sizing: border-box;
+  padding: 5px 0;
+  background: rgba(76, 175, 80, 0.3);
+  border-radius: 5px;
+}
+
+.item3 {
+  box-sizing: border-box;
+  background: rgba(76, 175, 80, 0.3);
+  border-radius: 5px;
+}
+
+.notes{
+  text-align: center;
+  font-size: larger;
+  color: rgb(122, 92, 206);
+}
+
+.review-container {
+  display: grid;
+  height: auto;
+  align-content: center;
+  grid-template-columns: auto auto ;
+  grid-gap: 10px;
+  background-color: lightblue;
+  padding: 10px;
+}
+
+.review-container > div {
+  background-color: orange;
+  text-align: center;
+  padding: 20px 0;
+  font-size: normal;
 }
 
 .head-review img {
@@ -17,37 +90,9 @@ body{
   width: 100px;
 }
 
-.aside {
-  width: 40%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  height: 150px;
-  background-color: palevioletred;
-}
-
-.about{
-  width: 55%;
-  font-size: x-large;
-  background-color: hotpink;
-  height: 300px;
-}
-
-.review-left{
-  width: 50%;
-  float:left;
-  height: 200 px;
-}
-.review-right{
-  width: 50%;
-  float:right;
-  height: 200 px;
-}
 .review-body{
-  padding-bottom: 5 px;
-  margin-left: 5px;
-  margin-right: 5px;
-  font-size: medium;
+  text-align: center;
+  padding:5px
 }
 
 #form{
