--- a/stylesindex.css
+++ b/stylesindex.css
@@ -29,7 +29,7 @@
       text-decoration: none;
   }
 
-  header{
+  .navbar{
       position: absolute;
       top: 0;
       left: 0;
@@ -40,7 +40,7 @@
       display: -ms-flex;
       display: -o-flex;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
       color: rgb(235, 94, 38);
       padding: 35px 100px 0;
@@ -50,8 +50,8 @@
   }
 
   header h2 a{
-      text-transform: uppercase;
-      font-weight: 900;
+    font-size:larger ;
+      font-weight: 700;
   }
 
   header .nav{
@@ -61,7 +61,7 @@
     display: -o-flex;
     display: flex;
     font-size:larger ;
-    
+    font-weight: 700;
   }
 
   header .nav li{
@@ -77,7 +77,7 @@
           padding: 20px 50px;
       }
       header .nav li a{
-          font-size: 11px;
+          font-size: 12px;
       }
   }
 
