--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 *{
   box-sizing: border-box;
 }
-
 body{
-  /* background-color: rgb(243, 233, 233); */
+  background-color: lightgray;
 }
+
 h2{
   text-align: center;
   font-weight: lighter;
@@ -45,6 +45,10 @@ h2{
   color: orangered;
 }
 
+.item-titles{
+  text-align: center;
+}
+
 .item1 {
   grid-column: 1 / 4;
   grid-row:1/3;
@@ -53,6 +57,7 @@ h2{
   border-radius: 2rem;
   height: auto;
   font-size: x-large;
+  text-align: justify;
 }
 
 .item2 {
@@ -63,6 +68,7 @@ h2{
   border-radius: 5px;
   font-size: larger;
   border-radius: 1rem;
+  text-align: justify;
 }
 
 .item3 {
@@ -73,12 +79,14 @@ h2{
   border-radius: 5px;
   font-size: larger;
   border-radius: 1rem;
+  text-align: justify;
 }
 
 .notes{
   text-align: center;
   font-size: larger;
   color: rgb(122, 92, 206);
+  padding-bottom: 10px;
 }
 
 .review-container {
@@ -105,19 +113,26 @@ h2{
 .name-review{
   font-size: larger; 
   font-weight: bold;
+  padding-bottom: 5px;
 }
 
 .place-review{
   font-size: large; 
   font-weight: 900;
+  padding-bottom: 5px;
 }
 
 .head-review img {
   float: left;
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
   border-radius: 50%;
   height: 100px;
   width: 100px;
+}
+
+.desc-review{
+  line-height: 1.3;
 }
 
 .review-body{
@@ -125,23 +140,7 @@ h2{
   padding:5px
 }
 
-#form{
-  text-align: center;
-  
-}
-.formRow {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-}
-
-.formColumn {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-}
-
-/*feedback form CSS*/
+/*feedback form*/
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -151,47 +150,44 @@ input[type=text], select, textarea {
 }
 
 label {
-  padding: 12px 12px 12px 0;
+  padding: 12px 12px;
   display: inline-block;
-}
-
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
+  font-weight: bolder;
+  font-size: larger;
 }
 
 input[type=submit] {
   background-color: orangered;
   color: white;
+  margin-top: 10px;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: right;
+  display: block;
+  width: 10%;
+  position: absolute;
+  left: 45%;
+  right: 45%;
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #1b8532;
 }
 
 .leftcol {
   float: left;
   width: 25%;
   margin-top: 6px;
+  padding-left: 15px;
 }
 
 .rightcol {
   float: left;
   width: 75%;
   margin-top: 6px;
+  padding-right: 15px;
+ 
 }
 
 /* Clear floats after the columns */
@@ -201,17 +197,60 @@ input[type=submit]:hover {
   clear: both;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+/* Media queries */
 @media screen and (max-width: 600px) {
-  .leftcol, .rightcol, input[type=submit] {
+  .leftcol, .rightcol {
     width: 100%;
     margin-top: 0;
   }
+  input[type=submit]{
+    display: block;
+    width: 40%;
+    position: absolute;
+    left: 30%;
+    right: 30%;
+  
+  }
+  
+  .leftcol {
+  margin-top: 6px;
+  padding-left: 0;
+  }
 
-#feedback{
-  background-color: palevioletred;
-
-  border-radius: 5px;
-  padding: 20px;
-  background: rgba(29, 128, 29, 0.30.6)
+  .rightcol {
+  padding-left: 10px;
+  margin-top: 6px;
+  padding-right: 5px;
+ 
+  }
+  .item1{
+    grid-column: 1 ;
+    grid-row:1;
+    box-sizing: border-box;
+    background: rgba(102, 102, 255, 0.3);
+    border-radius: 2rem;
+    height: auto;
+    font-size: x-large;
+    text-align: justify;
+  }
+  .item2{
+    grid-column: 1 ;
+    grid-row: 2;
+    box-sizing: border-box;
+    background: rgba(102, 102, 255, 0.3);
+    border-radius: 5px;
+    font-size: larger;
+    border-radius: 1rem;
+    text-align: justify;
+  }
+  .item3{
+    grid-column: 1 ;
+    grid-row: 3;
+    box-sizing: border-box;
+    background: rgba(102, 102, 255, 0.3);
+    border-radius: 5px;
+    font-size: larger;
+    border-radius: 1rem;
+    text-align: justify;
+  }
 }
