--- a/stylesindex.css
+++ b/stylesindex.css
@@ -1,177 +1,65 @@
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size:15px;
-  line-height: 1.5;
-  padding: 0;
-  margin:0;
-  background-color: lightgray;
+.grid-container {  
+  display: grid;
+  grid-gap: 1rem;
+  padding: 1rem;
 }
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 1rem;
+  font-size: 30px;
+}
+
+.grid-item:hover{
+  color: orangered;
+}
+
+.item-titles{
+  text-align: center;
+}
+
+.item1 {
+  grid-row:1/3;
+  grid-column: 1/3;
+  box-sizing: border-box;
+  background: rgba(102, 102, 255, 0.3);
+  border-radius: 2rem;
+  height: auto;
+  font-size: x-large;
+  text-align: justify;
+}
+
+.item2 {
+  grid-row:  1/ 3;
+  grid-column: 3/6;
+  box-sizing: border-box;
+  background: rgba(102, 102, 255, 0.3);
+  border-radius: 5px;
+  font-size: larger;
+  border-radius: 1rem;
+  text-align: justify;
+}
+
+@media screen and (max-width: 1000px) {
   
-  ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 20px;
-    overflow: hidden;
-    background-color: #35424a;
-    border-bottom: orangered 3px solid;
+  .item1{
+    grid-column: 1 ;
+    grid-row:1;
+    box-sizing: border-box;
+    background: rgba(102, 102, 255, 0.3);
+    border-radius: 2rem;
+    height: auto;
+    font-size: x-large;
+    text-align: justify;
   }
-  
-  ul.topnav li {float: left;}
-  
-  ul.topnav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 5px;
-    text-decoration: none;
+  .item2{
+    grid-column: 1 ;
+    grid-row: 2;
+    box-sizing: border-box;
+    background: rgba(102, 102, 255, 0.3);
+    border-radius: 5px;
+    font-size: larger;
+    border-radius: 1rem;
+    text-align: justify;
   }
-  
-  ul.topnav li a:hover{color: #111;}
-  
-  ul.topnav li.right {float: right;}
-  
-  
-  @media screen and (max-width: 652px) {
-    ul.topnav li.right, 
-    ul.topnav li {float: none;}
-  }
-
-  @media screen and (max-width: 1600px) {
-      ul.topnav li a{
-      font-size: large;
-      }
-    }
-
-    footer{
-      padding-top:10px;
-      margin-top: 20px;
-      color:white;
-      background-color: #e8491d;
-      text-align: center;
-  }
-  
-      /* footer part*/
-  .fa {
-    padding: 10px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-  }
-  
-  /*  hover effect  */
-  .fa:hover {
-    opacity: 0.7;
-  }
-  
-  /*  specific color for each brand */
-  
-  /* Facebook */
-  .fa-facebook {
-      color: white;
-    }
-    
-    /* Twitter */
-    .fa-twitter {
-      color: white;
-    }
-    /* instagram */
-    .fa-instagram {
-      color: white;
-    }
-    .footer-notes{
-        margin: 0;
-    }
-
-    .gallery{
-    margin:5px;
-    float:left;
-    width:390px;
-    border:1px solid white;
-}
-
-.gallery img{
-    width:100%;
-    height:50vh;
-}
-
-.images{
-  margin-bottom: 1200px;
-}
-.desc{
-    padding:20px;
-    text-align:center;
-}
-    
-
-h1{
-    text-align:center;
-    max-width:100%;
-    color:whitesmoke;
-}
-
-h2{
-    text-align:center;
-    color:olive;
-
-}
-
-
-
-head{
-    margin-top:0.5rem;
-    color:darkcyan;
-    text-align:center;
-}
-
-img{
-    max-width: 100%;
-    margin:0%;
-    
-}
-
-.grid .btn{
-    float:right;
-    background:black;
-    width:100px;
-    border:none;
-    outline:none;
-    color:#FFFFFF;
-    height:30px;
-    border-radius:30px;
-    margin-top:18px;
-    box-shadow:0px 5px 15px 0px rgba(28,0,181,0.3);
-}
-
-.grid .btn{
-    background-color:black;
-    float:right;
-    
-
-}
-
-
-
-
-
-@media only screen and (min-width: 481px){
-    /* tablet layout */
-    img{
-           width:45%;
-    }
-}
-
-@media only screen and (min-width:769px){
-    /* desktop layout */
-    img{
-           width: 50%;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="col-"] {
-      width: 100%;
-    }
-}
