--- a/styles.css
+++ b/styles.css
@@ -1,256 +1,130 @@
-*{
-  box-sizing: border-box;
-}
-body{
-  background-color: lightgray;
-}
-
-h2{
-  text-align: center;
-  font-weight: lighter;
-  color: orangered;
-  padding: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.intro{
-  text-align: center;
-  font-size: larger;
-  color: rgb(122, 92, 206);
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-.container{
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  padding: 16px;
-  margin: 16px 0
-}
-
-.grid-container {  
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-}
-
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 1rem;
-  font-size: 30px;
-}
-
-.grid-item:hover{
-  color: orangered;
-}
-
-.item-titles{
-  text-align: center;
-}
-
-.item1 {
-  grid-column: 1 / 4;
-  grid-row:1/3;
-  box-sizing: border-box;
-  background: rgba(102, 102, 255, 0.3);
-  border-radius: 2rem;
-  height: auto;
-  font-size: x-large;
-  text-align: justify;
-}
-
-.item2 {
-  grid-row:  1/ 2;
-  grid-column: 4/6;
-  box-sizing: border-box;
-  background: rgba(102, 102, 255, 0.3);
-  border-radius: 5px;
-  font-size: larger;
-  border-radius: 1rem;
-  text-align: justify;
-}
-
-.item3 {
-  grid-row:  2;
-  grid-column: 4/6;
-  box-sizing: border-box;
-  background: rgba(102, 102, 255, 0.3);
-  border-radius: 5px;
-  font-size: larger;
-  border-radius: 1rem;
-  text-align: justify;
-}
-
-.notes{
-  text-align: center;
-  font-size: larger;
-  color: rgb(122, 92, 206);
-  padding-bottom: 10px;
-}
-
-.review-container {
-  display: grid;
-  height: auto;
-  align-content: center;
-  grid-template-columns: auto auto ;
-  grid-gap: 10px;
-  padding: 10px;
-  
-}
-
-.review-container > div {
-  background: rgba(102, 102, 255, 0.3);
-  text-align: center;
-  padding: 20px 0;
-  font-size: normal;
-  border-radius: 1rem;
-}
-.review-container > div:hover{
-  color: orangered;
-}
-
-.name-review{
-  font-size: larger; 
-  font-weight: bold;
-  padding-bottom: 5px;
-}
-
-.place-review{
-  font-size: large; 
-  font-weight: 900;
-  padding-bottom: 5px;
-}
-
-.head-review img {
-  float: left;
-  margin-right: 10px;
-  margin-left: 10px;
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-}
-
-.desc-review{
-  line-height: 1.3;
-}
-
-.review-body{
-  text-align: center;
-  padding:5px
-}
-
-/*feedback form*/
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-label {
-  padding: 12px 12px;
-  display: inline-block;
-  font-weight: bolder;
-  font-size: larger;
-}
-
-input[type=submit] {
-  background-color: orangered;
-  color: white;
-  margin-top: 10px;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  display: block;
-  width: 10%;
-  position: absolute;
-  left: 45%;
-  right: 45%;
-}
-
-input[type=submit]:hover {
-  background-color: #1b8532;
-}
-
-.leftcol {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-  padding-left: 15px;
-}
-
-.rightcol {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-  padding-right: 15px;
- 
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Media queries */
-@media screen and (max-width: 600px) {
-  .leftcol, .rightcol {
-    width: 100%;
-    margin-top: 0;
-  }
-  input[type=submit]{
-    display: block;
-    width: 40%;
-    position: absolute;
-    left: 30%;
-    right: 30%;
-  
-  }
-  
-  .leftcol {
-  margin-top: 6px;
-  padding-left: 0;
-  }
-
-  .rightcol {
-  padding-left: 10px;
-  margin-top: 6px;
-  padding-right: 5px;
- 
-  }
-  .item1{
-    grid-column: 1 ;
-    grid-row:1;
-    box-sizing: border-box;
-    background: rgba(102, 102, 255, 0.3);
-    border-radius: 2rem;
-    height: auto;
-    font-size: x-large;
-    text-align: justify;
-  }
-  .item2{
-    grid-column: 1 ;
-    grid-row: 2;
-    box-sizing: border-box;
-    background: rgba(102, 102, 255, 0.3);
-    border-radius: 5px;
-    font-size: larger;
-    border-radius: 1rem;
-    text-align: justify;
-  }
-  .item3{
-    grid-column: 1 ;
-    grid-row: 3;
-    box-sizing: border-box;
-    background: rgba(102, 102, 255, 0.3);
-    border-radius: 5px;
-    font-size: larger;
-    border-radius: 1rem;
-    text-align: justify;
-  }
-}
+/* 
+        #form_container p, address{color: #444;font-size: .9em;padding: 7px;}
+        .or{font-size: 1em;font-weight: bold;text-align: center;}
+        #main{width:95%;margin: 10px auto;
+            display: grid;
+            grid-template-columns: 50% 40%;
+            justify-content: space-evenly;
+        }
+        .form_container{width: 100%; }
+        
+        @media only screen and (max-width: 768px){
+            #main{
+                grid-template-columns: 100%;
+            }
+        } */
+        .form_container{
+          width: 95%;
+          border-radius: 15px;
+          padding: 10px 20px;
+          margin: 15px auto;
+          background-color: #f6f6f6;
+      }
+      
+      .form_container h2{
+          text-align: center;
+          color: green;
+          font-size: .9em;
+          padding: 10px;
+      }
+      
+      .form_container form >input, .field >input, form >label{
+          display: block;
+          width: 100%;
+      }
+      
+      .form_container label, input{
+          font-size: .8em;
+          display: inline-block;
+          padding: 12px 5px;
+      }
+      
+      .form_container input, .form_container textarea{
+          font-size: .8em;
+          color: rgb(17, 17, 17);
+          border-radius: 5px;
+          border:none;outline:none;
+          box-shadow: 1px 1px 1px -1px grey;
+      }
+      
+      #message_container{margin-bottom: 7px;}
+      .form_container textarea{display: block;width: 100%;padding: 5px;font-family: Verdana, Geneva, Tahoma, sans-serif;padding:10px;}
+      
+      .form_container label{font-weight: bold;}
+      
+      .form_container form >input , .field >input{
+          border:none;
+          margin-bottom: 12px;
+      }
+      
+      .sub{
+          padding: 3px 20px 7px 20px;
+      }
+      .btn{
+          padding: 12px;
+          border-radius: 3px;
+          display: inline-block;
+          margin: 10px 0;
+          color: white !important;
+          border:none;
+          outline: none;
+      }
+      
+      .btn:hover{background-color: black;cursor: pointer;}
+      
+      .form_container input:hover, .form_container textarea:hover{box-shadow: 0px 2px 1px -1px grey;border:none;outline:none;}
+      .form_container input:focus, .form_container textarea:focus{box-shadow: 0px 2px 1px -1px grey;border:none;outline:none;background: #eeeeee;}
+      .form_container input[type=submit]{background-color: green;}
+      .form_container input[type=reset]{background-color: red;}
+      
+      .fileBtn{
+          color:white;
+          background-color: lightcoral;
+          display: inline-block !important;
+          width: auto !important;
+          padding: 7px 10px;
+          border-radius: 5px;
+          margin: 10px 0 15px 0;
+      }
+      
+      .fileBtn:hover{background-color: red;cursor:pointer;}
+      .buttons{text-align: center;}
+      .form_container .clearfix{display: block;clear: both;}
+      
+      @media only screen and (min-width: 768px){
+      
+          .form_container{
+              width: 60%;
+              clear: both;
+          }
+      
+          .field{
+              width: 50%;
+              float: left;
+              padding: 0px 10px;
+          }
+      
+          .btn{
+              width: 100px;
+              padding: 12px;
+              font-size: .9em !important;
+          }
+          #message_container{padding-left: 10px;}
+          .form_container label, input, .field >input{
+              font-size: .8em;
+              display: inline-block;
+              padding: 10px 5px;
+          }
+          .form_container form >input , .form_container .field >input{
+              padding: 12px;
+              font-size: .9em;
+          }
+      
+          .form_container form>label, .trms, .buttons{margin-left: 12px;}
+      
+          .form_container h2{
+              font-size: 1em;
+          }
+      
+      }
+      
