--- a/stylesindex.css
+++ b/stylesindex.css
@@ -53,13 +53,22 @@
 }
 
 @media screen and (max-width: 415px) {
+
+  .grid-item {
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 30px;
+    padding: 3px;
+    background: rgba(180, 163, 172, 0.6);
+  }
   
   .item1{
     grid-column: 1 ;
     grid-row:1;
     box-sizing: border-box;
-    text-align: justify;
-    width: 60%;
+    text-align: left;
+    width: 300px;
+    overflow: hidden;
 
   }
   .item2{
@@ -67,7 +76,7 @@
     grid-row: 2;
     box-sizing: border-box;
     text-align: justify;
-    width: 90%;
+    width: 100%;
   } 
   iframe{
     width: 150px;
